fix use of deprecated constructors for primitive types like Integer/Double/etc.
Replace with Integer.valueOf() and similar functions

Deprecation warning says that they are deprecated as of Java 9 (we're targeting 11), and they may be removed in the future. Docs say that the valueOf() functions are significantly faster. Double win!