@@ -6661,54 +6661,54 @@ public class DebugCLI implements Runnable, SourceLocator {
 	 */
 	static StringIntArray g_commandArray = new StringIntArray(new Object[][]
 			{
-					{"awatch", new Integer(CMD_AWATCH)}, //$NON-NLS-1$
-					{"break", new Integer(CMD_BREAK)}, //$NON-NLS-1$
-					{"bt", new Integer(INFO_STACK_CMD)}, //$NON-NLS-1$
-					{"continue", new Integer(CMD_CONTINUE)}, //$NON-NLS-1$
-					{"catch", new Integer(CMD_CATCH)}, //$NON-NLS-1$
-					{"cf", new Integer(CMD_CF)}, //$NON-NLS-1$
-					{"clear", new Integer(CMD_CLEAR)}, //$NON-NLS-1$
-					{"commands", new Integer(CMD_COMMANDS)}, //$NON-NLS-1$
-					{"condition", new Integer(CMD_CONDITION)}, //$NON-NLS-1$
-					{"connect", new Integer(CMD_CONNECT)}, //$NON-NLS-1$
-					{"delete", new Integer(CMD_DELETE)}, //$NON-NLS-1$
-					{"disable", new Integer(CMD_DISABLE)}, //$NON-NLS-1$
-					{"disassemble", new Integer(CMD_DISASSEMBLE)}, //$NON-NLS-1$
-					{"display", new Integer(CMD_DISPLAY)}, //$NON-NLS-1$
-					{"directory", new Integer(CMD_DIRECTORY)}, //$NON-NLS-1$
-					{"down", new Integer(CMD_DOWN)}, //$NON-NLS-1$
-					{"enable", new Integer(CMD_ENABLE)}, //$NON-NLS-1$
-					{"finish", new Integer(CMD_FINISH)}, //$NON-NLS-1$
-					{"file", new Integer(CMD_FILE)}, //$NON-NLS-1$
-					{"frame", new Integer(CMD_FRAME)}, //$NON-NLS-1$
-					{"help", new Integer(CMD_HELP)}, //$NON-NLS-1$
-					{"halt", new Integer(CMD_HALT)}, //$NON-NLS-1$
-					{"handle", new Integer(CMD_HANDLE)}, //$NON-NLS-1$
-					{"home", new Integer(CMD_HOME)}, //$NON-NLS-1$
-					{"info", new Integer(CMD_INFO)}, //$NON-NLS-1$
-					{"kill", new Integer(CMD_KILL)}, //$NON-NLS-1$
-					{"list", new Integer(CMD_LIST)}, //$NON-NLS-1$
-					{"next", new Integer(CMD_NEXT)}, //$NON-NLS-1$
-					{"nexti", new Integer(CMD_NEXT)}, //$NON-NLS-1$
-					{"mctree", new Integer(CMD_MCTREE)}, //$NON-NLS-1$
-					{"print", new Integer(CMD_PRINT)}, //$NON-NLS-1$
-					{"pwd", new Integer(CMD_PWD)}, //$NON-NLS-1$
-					{"quit", new Integer(CMD_QUIT)}, //$NON-NLS-1$
-					{"run", new Integer(CMD_RUN)}, //$NON-NLS-1$
-					{"rwatch", new Integer(CMD_RWATCH)}, //$NON-NLS-1$
-					{"step", new Integer(CMD_STEP)}, //$NON-NLS-1$
-					{"stepi", new Integer(CMD_STEP)}, //$NON-NLS-1$
-					{"set", new Integer(CMD_SET)}, //$NON-NLS-1$
-					{"show", new Integer(CMD_SHOW)}, //$NON-NLS-1$
-					{"source", new Integer(CMD_SOURCE)}, //$NON-NLS-1$
-					{"tutorial", new Integer(CMD_TUTORIAL)}, //$NON-NLS-1$
-					{"undisplay", new Integer(CMD_UNDISPLAY)}, //$NON-NLS-1$
-					{"up", new Integer(CMD_UP)}, //$NON-NLS-1$
-					{"where", new Integer(INFO_STACK_CMD)}, //$NON-NLS-1$
-					{"watch", new Integer(CMD_WATCH)}, //$NON-NLS-1$
-					{"what", new Integer(CMD_WHAT)}, //$NON-NLS-1$
-					{"viewswf", new Integer(CMD_VIEW_SWF)}, //$NON-NLS-1$
-					{"worker", new Integer(CMD_WORKER)}, //$NON-NLS-1$
+					{"awatch", Integer.valueOf(CMD_AWATCH)}, //$NON-NLS-1$
+					{"break", Integer.valueOf(CMD_BREAK)}, //$NON-NLS-1$
+					{"bt", Integer.valueOf(INFO_STACK_CMD)}, //$NON-NLS-1$
+					{"continue", Integer.valueOf(CMD_CONTINUE)}, //$NON-NLS-1$
+					{"catch", Integer.valueOf(CMD_CATCH)}, //$NON-NLS-1$
+					{"cf", Integer.valueOf(CMD_CF)}, //$NON-NLS-1$
+					{"clear", Integer.valueOf(CMD_CLEAR)}, //$NON-NLS-1$
+					{"commands", Integer.valueOf(CMD_COMMANDS)}, //$NON-NLS-1$
+					{"condition", Integer.valueOf(CMD_CONDITION)}, //$NON-NLS-1$
+					{"connect", Integer.valueOf(CMD_CONNECT)}, //$NON-NLS-1$
+					{"delete", Integer.valueOf(CMD_DELETE)}, //$NON-NLS-1$
+					{"disable", Integer.valueOf(CMD_DISABLE)}, //$NON-NLS-1$
+					{"disassemble", Integer.valueOf(CMD_DISASSEMBLE)}, //$NON-NLS-1$
+					{"display", Integer.valueOf(CMD_DISPLAY)}, //$NON-NLS-1$
+					{"directory", Integer.valueOf(CMD_DIRECTORY)}, //$NON-NLS-1$
+					{"down", Integer.valueOf(CMD_DOWN)}, //$NON-NLS-1$
+					{"enable", Integer.valueOf(CMD_ENABLE)}, //$NON-NLS-1$
+					{"finish", Integer.valueOf(CMD_FINISH)}, //$NON-NLS-1$
+					{"file", Integer.valueOf(CMD_FILE)}, //$NON-NLS-1$
+					{"frame", Integer.valueOf(CMD_FRAME)}, //$NON-NLS-1$
+					{"help", Integer.valueOf(CMD_HELP)}, //$NON-NLS-1$
+					{"halt", Integer.valueOf(CMD_HALT)}, //$NON-NLS-1$
+					{"handle", Integer.valueOf(CMD_HANDLE)}, //$NON-NLS-1$
+					{"home", Integer.valueOf(CMD_HOME)}, //$NON-NLS-1$
+					{"info", Integer.valueOf(CMD_INFO)}, //$NON-NLS-1$
+					{"kill", Integer.valueOf(CMD_KILL)}, //$NON-NLS-1$
+					{"list", Integer.valueOf(CMD_LIST)}, //$NON-NLS-1$
+					{"next", Integer.valueOf(CMD_NEXT)}, //$NON-NLS-1$
+					{"nexti", Integer.valueOf(CMD_NEXT)}, //$NON-NLS-1$
+					{"mctree", Integer.valueOf(CMD_MCTREE)}, //$NON-NLS-1$
+					{"print", Integer.valueOf(CMD_PRINT)}, //$NON-NLS-1$
+					{"pwd", Integer.valueOf(CMD_PWD)}, //$NON-NLS-1$
+					{"quit", Integer.valueOf(CMD_QUIT)}, //$NON-NLS-1$
+					{"run", Integer.valueOf(CMD_RUN)}, //$NON-NLS-1$
+					{"rwatch", Integer.valueOf(CMD_RWATCH)}, //$NON-NLS-1$
+					{"step", Integer.valueOf(CMD_STEP)}, //$NON-NLS-1$
+					{"stepi", Integer.valueOf(CMD_STEP)}, //$NON-NLS-1$
+					{"set", Integer.valueOf(CMD_SET)}, //$NON-NLS-1$
+					{"show", Integer.valueOf(CMD_SHOW)}, //$NON-NLS-1$
+					{"source", Integer.valueOf(CMD_SOURCE)}, //$NON-NLS-1$
+					{"tutorial", Integer.valueOf(CMD_TUTORIAL)}, //$NON-NLS-1$
+					{"undisplay", Integer.valueOf(CMD_UNDISPLAY)}, //$NON-NLS-1$
+					{"up", Integer.valueOf(CMD_UP)}, //$NON-NLS-1$
+					{"where", Integer.valueOf(INFO_STACK_CMD)}, //$NON-NLS-1$
+					{"watch", Integer.valueOf(CMD_WATCH)}, //$NON-NLS-1$
+					{"what", Integer.valueOf(CMD_WHAT)}, //$NON-NLS-1$
+					{"viewswf", Integer.valueOf(CMD_VIEW_SWF)}, //$NON-NLS-1$
+					{"worker", Integer.valueOf(CMD_WORKER)}, //$NON-NLS-1$
 
 			});
 
@@ -6717,20 +6717,20 @@ public class DebugCLI implements Runnable, SourceLocator {
 	 */
 	static StringIntArray g_infoCommandArray = new StringIntArray(new Object[][]
 			{
-					{"arguments", new Integer(INFO_ARGS_CMD)}, //$NON-NLS-1$
-					{"breakpoints", new Integer(INFO_BREAK_CMD)}, //$NON-NLS-1$
-					{"display", new Integer(INFO_DISPLAY_CMD)}, //$NON-NLS-1$
-					{"files", new Integer(INFO_FILES_CMD)}, //$NON-NLS-1$
-					{"functions", new Integer(INFO_FUNCTIONS_CMD)}, //$NON-NLS-1$
-					{"handle", new Integer(INFO_HANDLE_CMD)}, //$NON-NLS-1$
-					{"locals", new Integer(INFO_LOCALS_CMD)}, //$NON-NLS-1$
-					{"stack", new Integer(INFO_STACK_CMD)}, //$NON-NLS-1$
-					{"scopechain", new Integer(INFO_SCOPECHAIN_CMD)}, //$NON-NLS-1$
-					{"sources", new Integer(INFO_SOURCES_CMD)}, //$NON-NLS-1$
-					{"swfs", new Integer(INFO_SWFS_CMD)}, //$NON-NLS-1$
-					{"targets", new Integer(INFO_TARGETS_CMD)}, //$NON-NLS-1$
-					{"variables", new Integer(INFO_VARIABLES_CMD)}, //$NON-NLS-1$
-					{"workers", new Integer(INFO_WORKERS_CMD)}, //$NON-NLS-1$
+					{"arguments", Integer.valueOf(INFO_ARGS_CMD)}, //$NON-NLS-1$
+					{"breakpoints", Integer.valueOf(INFO_BREAK_CMD)}, //$NON-NLS-1$
+					{"display", Integer.valueOf(INFO_DISPLAY_CMD)}, //$NON-NLS-1$
+					{"files", Integer.valueOf(INFO_FILES_CMD)}, //$NON-NLS-1$
+					{"functions", Integer.valueOf(INFO_FUNCTIONS_CMD)}, //$NON-NLS-1$
+					{"handle", Integer.valueOf(INFO_HANDLE_CMD)}, //$NON-NLS-1$
+					{"locals", Integer.valueOf(INFO_LOCALS_CMD)}, //$NON-NLS-1$
+					{"stack", Integer.valueOf(INFO_STACK_CMD)}, //$NON-NLS-1$
+					{"scopechain", Integer.valueOf(INFO_SCOPECHAIN_CMD)}, //$NON-NLS-1$
+					{"sources", Integer.valueOf(INFO_SOURCES_CMD)}, //$NON-NLS-1$
+					{"swfs", Integer.valueOf(INFO_SWFS_CMD)}, //$NON-NLS-1$
+					{"targets", Integer.valueOf(INFO_TARGETS_CMD)}, //$NON-NLS-1$
+					{"variables", Integer.valueOf(INFO_VARIABLES_CMD)}, //$NON-NLS-1$
+					{"workers", Integer.valueOf(INFO_WORKERS_CMD)}, //$NON-NLS-1$
 			});
 
 	/**
@@ -6738,16 +6738,16 @@ public class DebugCLI implements Runnable, SourceLocator {
 	 */
 	static StringIntArray g_showCommandArray = new StringIntArray(new Object[][]
 			{
-					{"break", new Integer(SHOW_BREAK_CMD)}, //$NON-NLS-1$
-					{"directories", new Integer(SHOW_DIRS_CMD)}, //$NON-NLS-1$
-					{"files", new Integer(SHOW_FILES_CMD)}, //$NON-NLS-1$
-					{"functions", new Integer(SHOW_FUNC_CMD)}, //$NON-NLS-1$
-					{"locations", new Integer(SHOW_LOC_CMD)}, //$NON-NLS-1$
-					{"memory", new Integer(SHOW_MEM_CMD)}, //$NON-NLS-1$
-					{"net", new Integer(SHOW_NET_CMD)}, //$NON-NLS-1$
-					{"properties", new Integer(SHOW_PROPERTIES_CMD)}, //$NON-NLS-1$
-					{"uri", new Integer(SHOW_URI_CMD)}, //$NON-NLS-1$
-					{"variable", new Integer(SHOW_VAR_CMD)}, //$NON-NLS-1$
+					{"break", Integer.valueOf(SHOW_BREAK_CMD)}, //$NON-NLS-1$
+					{"directories", Integer.valueOf(SHOW_DIRS_CMD)}, //$NON-NLS-1$
+					{"files", Integer.valueOf(SHOW_FILES_CMD)}, //$NON-NLS-1$
+					{"functions", Integer.valueOf(SHOW_FUNC_CMD)}, //$NON-NLS-1$
+					{"locations", Integer.valueOf(SHOW_LOC_CMD)}, //$NON-NLS-1$
+					{"memory", Integer.valueOf(SHOW_MEM_CMD)}, //$NON-NLS-1$
+					{"net", Integer.valueOf(SHOW_NET_CMD)}, //$NON-NLS-1$
+					{"properties", Integer.valueOf(SHOW_PROPERTIES_CMD)}, //$NON-NLS-1$
+					{"uri", Integer.valueOf(SHOW_URI_CMD)}, //$NON-NLS-1$
+					{"variable", Integer.valueOf(SHOW_VAR_CMD)}, //$NON-NLS-1$
 			});
 
 	/**
@@ -6755,10 +6755,10 @@ public class DebugCLI implements Runnable, SourceLocator {
 	 */
 	static StringIntArray g_enableCommandArray = new StringIntArray(new Object[][]
 			{
-					{"breakpoints", new Integer(CMD_BREAK)}, //$NON-NLS-1$
-					{"display", new Integer(CMD_DISPLAY)}, //$NON-NLS-1$
-					{"delete", new Integer(CMD_DELETE)}, //$NON-NLS-1$
-					{"once", new Integer(ENABLE_ONCE_CMD)}, //$NON-NLS-1$
+					{"breakpoints", Integer.valueOf(CMD_BREAK)}, //$NON-NLS-1$
+					{"display", Integer.valueOf(CMD_DISPLAY)}, //$NON-NLS-1$
+					{"delete", Integer.valueOf(CMD_DELETE)}, //$NON-NLS-1$
+					{"once", Integer.valueOf(ENABLE_ONCE_CMD)}, //$NON-NLS-1$
 			});
 
 	/**
@@ -6766,8 +6766,8 @@ public class DebugCLI implements Runnable, SourceLocator {
 	 */
 	static StringIntArray g_disableCommandArray = new StringIntArray(new Object[][]
 			{
-					{"display", new Integer(CMD_DISPLAY)}, //$NON-NLS-1$
-					{"breakpoints", new Integer(CMD_BREAK)}, //$NON-NLS-1$
+					{"display", Integer.valueOf(CMD_DISPLAY)}, //$NON-NLS-1$
+					{"breakpoints", Integer.valueOf(CMD_BREAK)}, //$NON-NLS-1$
 			});
 
 
